<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/organizer_background_card"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/dialog_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/organizer_business_category"
            android:checked="true"
            android:text="@string/or_business"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/organizer_personal_category"
            android:text="@string/or_personal"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/organizer_others_category"
            android:text="@string/or_other"
            android:textColor="@color/white" />


    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:backgroundTint="@color/organizer_accent"/>



</LinearLayout>