<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_cardView"
    tools:context=".Apps.IMCalculator.ResultIMCActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_cardView_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnRecalculate"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:text="IMC"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="0"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="16dp"
                android:text="@string/descrip_obesity"
                android:layout_gravity="center"
                android:textColor="@color/white"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="26dp"
                android:text="@string/title_water_for_day"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tvWFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="0"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="26dp"
                android:text="@string/title_calories_for_day"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvGCT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="0"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRecalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/recalculate"
        android:backgroundTint="#5F2BBA"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>






</androidx.constraintlayout.widget.ConstraintLayout>